# Chess_Engine

./: ARCHITECTURE.md  Cargo.toml  MASTER_PLAN.md  README.md  package-lock.json  pipeline.config.json
.github/workflows/: regression.yml  release.yml
.pipeline/: review-patterns.md  state.json
.pipeline/milestones/m01/: feedback-v1.md  spec-locked.md  spec-v1.md  spec.md
.pipeline/milestones/m02/: feedback-v1.md  feedback-v2.md  feedback-v3.md  spec-locked.md  spec-v1.md  spec-v2.md  spec-v3.md  spec.md
.pipeline/milestones/m03/: feedback-v1.md  feedback-v2.md  feedback-v3.md  spec-v1.md  spec-v2.md  spec-v3.md  spec.md  tiebreak.md
.pipeline/milestones/m04/: feedback-v1.md  spec-v1.md  spec-v2.md  spec.md
.pipeline/milestones/m05/: feedback-v1.md  feedback-v2.md  spec-v1.md  spec-v2.md  spec-v3.md  spec.md
.pipeline/milestones/m06/: feedback-v1.md  feedback-v2.md  spec-v1.md  spec-v2.md  spec-v3.md  spec.md
.pipeline/milestones/m07/: feedback-v1.md  feedback-v2.md  feedback-v3.md  spec-v1.md  spec-v2.md  spec-v3.md  spec.md  tiebreak.md
.pipeline/milestones/m08/: feedback-v1.md  spec-v1.md  spec-v2.md  spec.md
.pipeline/milestones/m09/: feedback-v1.md  feedback-v2.md  feedback-v3.md  spec-v1.md  spec-v2.md  spec-v3.md  spec.md  tiebreak.md
.pipeline/milestones/m10/: feedback-v1.md  feedback-v2.md  spec-locked.md  spec-v1.md  spec-v2.md  spec.md
.pipeline/milestones/m11/: feedback-v1.md  feedback-v2.md  feedback-v3.md  spec-locked.md  spec-v1.md  spec-v2.md  spec-v3.md  spec.md
benches/: nnue_bench.rs
crates/board/: Cargo.toml
crates/board/src/: fen.rs  lib.rs  position.rs  zobrist.rs
crates/engine/: Cargo.toml
crates/engine/src/: lib.rs  main.rs
crates/engine/src/book/: mod.rs
crates/engine/src/syzygy/: mod.rs
crates/eval/: Cargo.toml
crates/eval/src/: endgame.rs  king_centralization.rs  king_safety.rs  lib.rs  material.rs  mobility.rs  pawn.rs  phase.rs  pieces.rs  pst.rs
crates/movegen/: Cargo.toml
crates/movegen/src/: bishops.rs  castling.rs  king.rs  knights.rs  lib.rs  magic.rs  (+3 more)
crates/nnue/: Cargo.toml
crates/search/: Cargo.toml
crates/types/: Cargo.toml
crates/uci/: Cargo.toml
lichess-bot/: README.md  config.yml
tests/: perft.rs  perft_suite.rs
tests/data/: ecm.epd  perft_suite.txt  sts.epd
tools/datagen/: Cargo.toml
tools/perft/: Cargo.toml
tools/pgn-extract/: Cargo.toml
tools/selfplay/: Cargo.toml  openings.txt
tools/sprt/: Cargo.toml
tools/tactical/: Cargo.toml
tools/texel/: Cargo.toml
tools/tournament/: Cargo.toml  engines.toml
tools/training/: Cargo.toml
(+752 files in other folders)
