[workspace]
resolver = "2"
members = ["crates/types", "crates/board", "crates/movegen", "crates/nnue", "crates/eval", "crates/search", "crates/uci", "tools/perft", "tools/tactical", "tools/selfplay", "tools/texel", "tools/pgn-extract", "tools/sprt", "tools/tournament", "tools/datagen", "crates/engine"]

[workspace.package]
edition = "2021"
