[workspace]
resolver = "2"
members = ["crates/types", "crates/board", "crates/movegen", "crates/nnue", "crates/eval", "crates/search", "crates/uci", "tools/perft", "tools/tactical", "tools/selfplay", "tools/texel", "tools/pgn-extract", "tools/sprt", "tools/tournament", "tools/datagen", "crates/engine"]

[workspace.package]
edition = "2021"

[package]
name = "chess-workspace"
version = "0.1.0"
edition.workspace = true
publish = false

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
chess-nnue = { path = "crates/nnue" }
chess-board = { path = "crates/board" }
chess-types = { path = "crates/types" }
chess-movegen = { path = "crates/movegen" }

[[bench]]
name = "nnue_bench"
harness = false
