[package]
name = "engine"
version = "0.1.0"
edition.workspace = true

[lib]
name = "chess_engine"
path = "src/lib.rs"

[[bin]]
name = "engine"
path = "src/main.rs"

[dependencies]
chess-uci = { path = "../uci" }
chess-search = { path = "../search" }
chess-movegen = { path = "../movegen" }
chess-board = { path = "../board" }
chess-types = { path = "../types" }
anyhow = "1"
rand = "0.8"
fathom-syzygy = "0.1.0"
