[package]
name = "engine"
version = "0.1.0"
edition.workspace = true

[lib]
name = "chess_engine"
path = "src/lib.rs"

[[bin]]
name = "engine"
path = "src/main.rs"

[features]
default = []
simd-sse2 = ["chess-nnue/simd-sse2"]
simd-avx2 = ["chess-nnue/simd-avx2"]
simd-neon = ["chess-nnue/simd-neon"]

[dependencies]
chess-uci = { path = "../uci" }
chess-search = { path = "../search" }
chess-movegen = { path = "../movegen" }
chess-board = { path = "../board" }
chess-types = { path = "../types" }
chess-nnue = { path = "../nnue" }
anyhow = "1"
rand = "0.8"
fathom-syzygy = "0.1.0"
